; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-thin.c_get_metadata_dev_size.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-thin.c_get_metadata_dev_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.block_device = type { i32 }

@THIN_METADATA_MAX_SECTORS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.block_device*)* @get_metadata_dev_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @get_metadata_dev_size(%struct.block_device* %0) #0 {
  %2 = alloca %struct.block_device*, align 8
  %3 = alloca i64, align 8
  store %struct.block_device* %0, %struct.block_device** %2, align 8
  %4 = load %struct.block_device*, %struct.block_device** %2, align 8
  %5 = call i64 @get_dev_size(%struct.block_device* %4)
  store i64 %5, i64* %3, align 8
  %6 = load i64, i64* %3, align 8
  %7 = load i64, i64* @THIN_METADATA_MAX_SECTORS, align 8
  %8 = icmp sgt i64 %6, %7
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i64, i64* @THIN_METADATA_MAX_SECTORS, align 8
  store i64 %10, i64* %3, align 8
  br label %11

11:                                               ; preds = %9, %1
  %12 = load i64, i64* %3, align 8
  ret i64 %12
}

declare dso_local i64 @get_dev_size(%struct.block_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
